# Deep-learning-based-video-surveillance-system-managed-by-low-cost-hardware-and-panoramic-cameras-

./: CMakeLists.txt  Detection.cpp  Detection.h  README.md  Ventana.cpp  Ventana.h  anomalousCategories4.txt  anomalousCategoriesCoco.txt  instruccionesCompilarModelo.txt  main.cpp  tutorialHelpers.h
